--- a/frontend/src/app/tournament/enter-scorecard/enter-scorecard.component.scss
+++ b/frontend/src/app/tournament/enter-scorecard/enter-scorecard.component.scss
@@ -515,7 +515,7 @@ $light-bg: #fafafa;
 
   .scorecard-section {
     padding: 0;
-    margin: 1rem -1rem 0 -1rem;
+    margin: 1rem 0 0 0;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     width: auto;
@@ -525,7 +525,6 @@ $light-bg: #fafafa;
     display: flex;
     flex-direction: column;
     width: max-content;
-    min-width: 100vw;
   }
 
   .scorecard-table {
